🪟 🐛 Fix "dancing" scrollbar (#9930)

--- a/airbyte-webapp/src/components/NewJobItem/NewJobItem.module.scss
+++ b/airbyte-webapp/src/components/NewJobItem/NewJobItem.module.scss
@@ -17,6 +17,11 @@
     flex-grow: 1;
   }
 
+  // fix for "dancing" scrollbar
+  &__spinnerContainer {
+    overflow: clip
+  }
+
   &__summary {
     overflow: hidden;
   }
